--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -158,7 +158,7 @@ background: linear-gradient(to right, #514A9D, #24C6DC); /* W3C, IE 10+/ Edge, F
                           <strong>{{user.username}}</strong>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                          <li><a class="dropdown-item" href="/register">Register</a></li>
+                          <li><a class="dropdown-item" href="/register">Register Team</a></li>
                           <li><a class="dropdown-item" href="/pointstable">Points Table</a></li>
                           <li><a class="dropdown-item" href="/profile">Profile</a></li>
                           <li><hr class="dropdown-divider"></li>
