--- a/hello/templates/ticketcounter.html
+++ b/hello/templates/ticketcounter.html
@@ -29,7 +29,7 @@
             <div class="col-lg-9">
               <div class="card border shadow-0">
                 <div class="m-4">
-                  <h4 class="card-title mb-4">Your shopping cart</h4>
+                  <h4 class="card-title mb-4">Your ticket counter</h4>
                   {% if cart %}
                   {% for c in cart %}
                   <div class="row gy-3">
