--- a/hello/templates/previousmatches.html
+++ b/hello/templates/previousmatches.html
@@ -373,7 +373,7 @@ background: linear-gradient(to right, #4ca2cd, #67B26F); /* W3C, IE 10+/ Edge, F
       
       <div class="wrapper-wrapper previous">
         <div class="wrapper">
-          <i id="left" class="fa-solid ">
+          <i id="left" style="box-shadow:none" class="fa-solid ">
             <img src="/static/img/leftlogo.png" alt="img" draggable="false">
           </i>
           <ul class="carousel">
@@ -392,7 +392,7 @@ background: linear-gradient(to right, #4ca2cd, #67B26F); /* W3C, IE 10+/ Edge, F
             </div>
             {%endfor%}
           </ul>
-          <i id="right" class="fa-solid ">
+          <i id="right" style="box-shadow:none" class="fa-solid ">
             <img src="/static/img/rightlogo.png" alt="img" draggable="false">
           </i>
         </div>
