--- a/hello/templates/shop.html
+++ b/hello/templates/shop.html
@@ -241,8 +241,8 @@
                <h3 style="color:black;font-family:bold;font-size:34px" class="card-title">{{j.product_name}}</h3>
                <p class="price_text "style="margin:0px;margin-top:30px;margin-bottom:40px">Price  <span style="color: #262626;">$ 30</span></p>
                <div class="btn_main">
-                  <div class="buy_bt"><a href="/shop/{{j.product_category}}/{{j.id}}/">Buy Now</a></div>
-                  <div class="seemore_bt"><a href="/shop/{{j.product_category}}/{{j.id}}/">See More</a></div>
+                  <div class="buy_bt"><a href="/shop/{{j.product_category}}/{{j.id}}">Buy Now</a></div>
+                  <div class="seemore_bt"><a href="/shop/{{j.product_category}}/{{j.id}}">See More</a></div>
                </div>
             </div>
            </div>
