--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -136,7 +136,7 @@ background: linear-gradient(to right, #514A9D, #24C6DC); /* W3C, IE 10+/ Edge, F
             <div class="col-12">
                 <nav class="main-nav" style="width:100%; margin:0px;">
                     <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
+                    <a href="/" class="logo">
                         <img src="https://w0.peakpx.com/wallpaper/588/500/HD-wallpaper-harry-potter-logo-team.jpg" alt="" style="width: 88px; height:100px;">
                     </a>
                     <!-- ***** Logo End ***** -->
@@ -144,7 +144,9 @@ background: linear-gradient(to right, #514A9D, #24C6DC); /* W3C, IE 10+/ Edge, F
                     <ul class="nav ull" id="ull" style="display;block;">
                       <li  id="menu" style="; z-index:100">
                         <a  class='menu-trigger'>
+
                         <span style="">Menu</span>
+                        
                         </a>
                       </li>
                       <li><a href="/">HOME</a></li>
