--- a/hello/templates/inde.html
+++ b/hello/templates/inde.html
@@ -10,7 +10,7 @@
     <title>Harry Potter World</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/assets/css/carousel.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
