--- a/hello/templates/shop.html
+++ b/hello/templates/shop.html
@@ -13,19 +13,19 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="/static/shop/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="static/shop/css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="/static/shop/css/style.css">
+      <link rel="stylesheet" type="text/css" href="static/shop/css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="/static/shop/css/responsive.css">
-      <link rel="stylesheet" href="/static/shop/css/swiper-bundle.min.css">
+      <link rel="stylesheet" href="static/shop/css/responsive.css">
+      <link rel="stylesheet" href="static/shop/css/swiper-bundle.min.css">
 
       <!-- CSS -->
-      <link rel="stylesheet" href="/static/shop/css/sta.css">
+      <link rel="stylesheet" href="static/shop/css/sta.css">
       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="/static/shop/css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="static/shop/css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- fonts -->
